lab1/Test/L1-A-6-29.output
Error Type B at Line 3
Error Type B at Line 7
Error Type B at Line 14
Error Type A at Line 25
Error Type A at Line 25
