lab1/Test/L1-A-6-29.cmm
int Gx1x2 ( int aazNqs3QF30BEsSp4B6v , struct FUUBqVySmSGC 
  Rl6 , struct {
}LD5_Hd7BEwZqiSf3Z [ 36191503 ] float lyXZ21Xh0gEbtjv 
  , int QWSfi ) {
  float MHfapauylpQwA [ 1400878347 ] [ 1048041949 
    ] = - - - ! - nknbhF2qUtCk0 / Qt1lpDnDKMoO08VOcneU 
    ( ) * ! ! ! NsM ! ! Uhp5MeqjyWgrWi_eDA ( GQTP ) . 
    eIwI72aeJsxLS3uFBW ;
  float R4LeOAdHqCJEgTuvdzJU [ 506389530 ] [ 192357362 
    ] = - - - ! nhoSCaX / ! - y0z / ! ! nX4Bjl * - ! jriMKnraxxZhw 
    / ! ! b25Jp0zrkMQA + ! ta7z3aothPAji + - uZCgDjeEyN2q270sPz7 
    ( FKASJRoRxzy9x8Wye ) . yLfRS8arJz * FWSUkNarHiTlTMaL 
    + - - IN5_1mdGvRREz5h5w * YpOIDEQecltiz7r / UkVa3uVFFlrtqOjO 
    * || ( - QtllTEEWoyuySAPKVBeH = Smwiq1wZFZ4TeE2OQlQ 
    ) * cinrJmKotdbDzPL / pBMGECKgGq <= EE_kxNi || - ! 
    C2ePdQEmpLIZ + I || oOZiLjyK4DGohnld ( t8Qfheyzl ) 
    . MbWh6wPT86TN9 [ eCizvuipZDo7 ] >= Cu9jHgvdD15LKXPsc 
    == r3m <= kdY1iOKD >= axJ1iT3 == vOh0VumkSiELbwLhNn 
    <= TwtvvVmc7c == Sy6w552agt == BsjYi && J5I9JhlDO6uUsW9E1Tn 
    && rl6iX0gJ || 1180025704 - HZGgeMxzNMm4HY1 + V + 
    V7JKMm3QEJ55h - cmEMUnMisitxbo_ + jSsE + CzfJnf27FsUWRObPP 
    - H4Qpo > Aq8buEPy <= H > iwJZcuW <= LMjeGOeXMHVSXtu2 
    < UX5RY9Aha2 >= SDagpIOip ;
}
~: